# scopos

./: .gitignore  README.md  SCOPOS.py  pyproject.toml  requirements.txt
examples/: report_to_scopos.py
scopos/: __init__.py  __main__.py  app.py  monitor.py  widgets.py
src/scopos/: __init__.py  api.py  app.py  cli.py  config.py  metadata.py  monitor.py  widgets.py
src/scopos/metadata/: api.py  utils.py
src/scopos/widgets/: _utils.py  cards.py  columns.py  dialogs.py  grid.py  others.py  proc_table.py  views.py
tests/: report_to_scopos.py
