[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scopos"
version = "2.0.0"
description = "A Textual TUI for monitoring GPU memory usage, grouped by user."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "TianZhen" }]
license = { file = "LICENSE" }
dependencies = [
    "textual>=0.60",
    "psutil>=5.9",
    "nvidia-ml-py>=12.0",
]

[project.scripts]
scopos = "scopos.__main__:main"

[tool.setuptools]
packages = ["scopos"]
