[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scopos"
dynamic = ["version"]
description = "A Textual terminal UI that monitors NVIDIA GPUs grouped by user — live memory/utilisation, per-user breakdown, tmux process management, scopos-API progress bars, and a confirm-guarded batch kill."
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    {name = "Zhen Tian", email = "zhen.tian.cs@gmail.com"}
]
requires-python = ">=3.8"

dependencies = [
    "textual>=0.60",
    "psutil>=5.9",
    "nvidia-ml-py>=12.0",
]

[project.scripts]
scopos = "scopos.cli:main"

[project.urls]
Homepage = "https://github.com/tinchen777/scopos-cli.git"
Repository = "https://github.com/tinchen777/scopos-cli.git"
Issues = "https://github.com/tinchen777/scopos-cli.git/issues"

[tool.setuptools.dynamic]
version = {attr = "scopos.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["scopos*"]
